EXTRA_DIST = Pythia-PtMin1000-LHC-10ev.dat             \
             Pythia-Z2jets-lhc-pileup-1ev.dat	       \
             Pythia-Zp2jets-lhc-pileup-1ev.dat	       \
             Pythia-dijet-ptmin100-lhc-pileup-1ev.dat  \
             boosted_top_event.dat                     \
             cone-darktower.dat			       \
             cone-midpoint-problem-ev1.dat	       \
             cone-midpoint-problem-ev2.dat	       \
             cone-sm-pt-problem-ev1.dat		       \
             cone-sm-pt-problem-ev2.dat		       \
	     HZ-event-Hmass115.dat                     \
             single-ee-event.dat                       \
             single-event.dat                          
