SUBDIRS = internal
fastjetincludedir=$(includedir)/fastjet
fastjetinclude_HEADERS= JetDefinition.hh\
  PseudoJetStructureBase.hh\
  ClusterSequenceStructure.hh\
  PseudoJet.hh\
  ClusterSequence.hh\
  Error.hh\
  RangeDefinition.hh\
  CircularRange.hh\
  version.hh\
  AreaDefinition.hh\
  ActiveAreaSpec.hh\
  GhostedAreaSpec.hh\
  ClusterSequenceAreaBase.hh\
  ClusterSequenceArea.hh\
  ClusterSequenceWithArea.hh\
  ClusterSequenceActiveArea.hh\
  ClusterSequenceActiveAreaExplicitGhosts.hh\
  ClusterSequence1GhostPassiveArea.hh\
  ClusterSequencePassiveArea.hh\
  ClusterSequenceVoronoiArea.hh\
  NNBase.hh\
  NNH.hh\
  NNFJN2Plain.hh\
  NNFJN2Tiled.hh\
  SharedPtr.hh\
  FunctionOfPseudoJet.hh\
  Selector.hh\
  CompositeJetStructure.hh\
  WrappedStructure.hh\
  LimitedWarning.hh\
  RectangularGrid.hh\
  config.h

nodist_fastjetinclude_HEADERS= config_auto.h
EXTRA_DIST= config_win.h
